socon/templates/deploy.yaml
# PHP backend
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - image: thijsray/backend
        name: socon-backend
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
# Persistent volume claim for postgres
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-pv-claim
  labels: # TODO remove
    topology.kubernetes.io/zone: europe-west1
spec:
  storageClassName: standard-rwo
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 5Gi
---
# Postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    topology.kubernetes.io/zone: europe-west1
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:15.1
          name: socon-database
          volumeMounts:
             - mountPath: /var/lib/postgresql
               subPath: data
               name: postgres
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
# Postgres service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
